Implement message send
